...
                    }
                }
            }
            .navigationTitle("Onboarding")
            .toolbar {
                ToolbarItem(placement: .confirmationAction) {
                    Button("Submit") {
                        orbitData.currentUser =
                            orbitData.users[selectedUserIndex]
                    }
                }
            }
        }
...
